--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "3"
-members = ["chapter02/hello_world/hello_world_guest", "chapter03/smart_cms/smartcms_test_host"]
+members = ["chapter02/hello_world/hello_world_guest", "chapter03/smart_cms/smartcms_test_host", "chapter04/hello_world_wasi/hello_world_wasi_host"]
