--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ members = [
     "chapter04/wasi02/hello_world_wasi02",
     "chapter04/smart_cms/smartcms_test_host_chapter4",
     "chapter05/wasi_nn_example",
+    "chapter06/hello-world-wasmcloud",
 ]
